--- a/VAE_MNIST.ipynb
+++ b/VAE_MNIST.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,8 @@
    ],
    "source": [
     "model = Net()\n",
-    "model.to(\"cuda\")"
+    "model.to(\"cuda\")\n",
+    "\n"
    ]
   },
   {
